# qc-handbook

./: .gitignore  .nojekyll  404.html  404.qmd  README.md  _quarto.yml  hybridsolvers.html  hybridsolvers.qmd  index.html  index.qmd  intro.html  intro.qmd  libraries.html  libraries.md  pyproject.toml  references.bib  references.html  requirements.txt  robots.txt  search.json  sitemap.xml  submit_circuit.html  summary.html  summary.qmd  theory.html  theory.qmd
.github/workflows/: publish.yml
assets/: custom.css  custom_backup.css
parts/: intro.html  intro.qmd  references.bib  references.html
parts/algorithms/: adiabatic.html  adiabatic.md  aqc.html  aqc.qmd  complexity.html  complexity.md  digitizedaqc.html  digitizedaqc.md  examplesfordaqc.html  examplesfordaqc.qmd  extras.html  extras.md  optimization.html  optimization.qmd  optimizingcircuits.html  optimizingcircuits.qmd  otherconsiderations.html  otherconsiderations.md  problemposing.html  problemposing.md  qaoa.html  qaoa.md  qaoaexample.html  qaoaexample.qmd  quboformulations.html  quboformulations.qmd  trainingcircuits.html  trainingcircuits.qmd  usingexistingframeworks.html  usingexistingframeworks.ipynb  variational.html  variational.qmd  vqe.html  vqe.md
parts/appendix/: hybridsolvers.html  hybridsolvers.qmd  libraries.html  libraries.md  quantumfeatures.html  quantumfeatures.qmd  submit_circuit.html  submit_circuit.ipynb
parts/computers/: challenges.html  challenges.md  currentoffering.html  currentoffering.md  firstrealizations.html  firstrealizations.md  (+6 more)
static/: code_body.html  code_head.html
(+39 files in other folders)
